force-app/main/default/objects/PWChrono_Salary_Component__c/PWChrono_Salary_Component__c.object-meta.xml
<CustomObject>
    <label>Salary Component</label>
    <nameField>
        <label>Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salary Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>