force-app/main/default/objects/PWChrono_Salary_Component__c/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <label>Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Earning</fullName>
                <default>true</default>
                <label>Earning</label>
            </value>
            <value>
                <fullName>Deduction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>