force-app/main/default/objects/PWChrono_Salary_Component__c/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <label>Formula</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>