force-app/main/default/objects/PWChrono_Salary_Component__c/listViews/Active_Deductions.listView-meta.xml
<ListView>
    <fullName>Active_Deductions</fullName>
    <columns>NAME</columns>
    <columns>Component_Type__c</columns>
    <columns>Is_Taxable__c</columns>
    <columns>Formula__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Component_Type__c</field>
        <operation>equals</operation>
        <value>Deduction</value>
    </filters>
    <label>Active Deductions</label>
</ListView>