force-app/main/default/objects/PWChrono_Salary_Component__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Component_Type__c</columns>
    <columns>Formula__c</columns>
    <columns>Description__c</columns>
    <columns>Is_Taxable__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>